<resources>
    <string name="app_name">StoreMe</string>

    <string name="action_settings">Settings</string>
    <string name="clickToClose">Click again to close!</string>
    <string name="fillInServer">Pleace fill in the server address</string>
    <string name="save">Save</string>
    <string name="start">Start StoreMe</string>
    <string name="title_activity_settings">Settings</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="about">About</string>

    <string name="aboutText">StorMe is an universal, intuitive and easy-to-use solution to organize your storage.\n\nTo use this application you need to install StoreMe on your local machine or server. \nVisit our website to learn more."</string>

</resources>
