<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="programmierprojekt.fhws.marcelgross.storeme.SettingsActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_input_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/fillInServer"
        android:layout_alignParentStart="false" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/del_btn"
        android:layout_below="@+id/settings_input_et"
        android:layout_alignStart="@+id/settings_input_et"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/edit_btn"
        android:layout_alignTop="@+id/del_btn"
        android:layout_alignEnd="@+id/settings_input_et"
        android:layout_marginRight="16dp" />
</RelativeLayout>
